# robochat

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  events.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  conversations.py  robot.py
backend/app/services/: commands.py  llm.py  persona.py
backend/tests/: test_commands.py  test_conversations.py  test_llm_stream.py
docs/demo/: README.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatWindow.tsx  ConversationList.tsx  EnvironmentVisualizer.tsx  MessageBubble.tsx  RobotAvatar.tsx  RobotStatusPanel.tsx  VoiceControl.tsx
frontend/lib/: api.ts  speech.ts  store.ts
frontend/types/: speech.d.ts
